# Desktop-notes-app

./: .env  .gitignore  CODE_REVIEW.md  DATABASE_UPDATE_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  EASY_LAUNCH_GUIDE.md  HOW_TO_LAUNCH.md  IMPLEMENTATION_SUMMARY.md  README.md  Racing Notes Desktop Launcher.command  Racing Notes V2.0.command  STABLE_BACKUP_v2.9.1.md  STREAMLIT_DEPLOYMENT.md  SUPABASE_SETUP.md  V1.0_RELEASE_NOTES.md  V2.0_RELEASE_NOTES.md  V2.5_RELEASE_NOTES.md  add_drivers.sql  app.py  check_database_view.py  create_desktop_app.py  create_desktop_shortcut.sh  create_fixed_desktop_app.py  debug_media_system.py  launch_app.command  media_upload_debugger.py  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py  test_app_launch.py  test_cloud_storage.py  test_storage.py  test_video_upload.py  update_note_view_for_media.sql  update_tags.sql  web_app.py  🏁 Racing Notes Desktop.command  🏁 Racing Notes.command
.streamlit/: config.toml  secrets.toml
app/: __init__.py  config.py  main.py  settings.py
app/data/: models.py  supabase_client.py
app/services/: data_service.py
app/ui/: feed_view.py  main_window.py  note_dialog.py
app/ui/components/: filters.py  inline_video_player.py  media_preview.py  media_viewer.py  note_card.py  note_creation_panel.py  tag_selector.py
app/utils/: __init__.py  exceptions.py  helpers.py
data/: cache.py  supabase_client.py
scripts/: dev_run.sh
services/: __init__.py  cloud_storage.py  data_service.py
supabase/: schema.sql
